# elogfetch

./: .env.example  .gitignore  CLAUDE.md  README.md  env.sh  pyproject.toml
docs/: DESIGNS.md
examples/: README.md  periodic_update.sh
scripts/: elog-cron.sh
src/elogfetch/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/elogfetch/api/: __init__.py  client.py  file_manager.py  info.py  logbook.py  questionnaire.py  runtable.py  workflow.py
src/elogfetch/storage/: __init__.py  database.py
src/elogfetch/utils/: __init__.py  locking.py  logging.py
src/fetch_elog/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/fetch_elog/api/: experiments.py
src/fetch_elog/storage/: __init__.py  database.py
src/fetch_elog/utils/: __init__.py  locking.py  logging.py
tests/: __init__.py  conftest.py  test_api_transforms.py  test_config.py  test_database.py  test_locking.py
